common/ferrostar/src/snapshots/ferrostar__simulation__tests__advance_to_next_location.snap
---
source: ferrostar/src/simulation.rs
expression: states
---
- current_location:
    coordinates:
      lat: 0
      lng: 0
    horizontal_accuracy: 0
    course_over_ground:
      degrees: 45
      accuracy: 0
  remaining_locations:
    - lat: 1
      lng: 1
    - lat: 2
      lng: 2
    - lat: 3
      lng: 3
- current_location:
    coordinates:
      lat: 1
      lng: 1
    horizontal_accuracy: 0
    course_over_ground:
      degrees: 45
      accuracy: 0
  remaining_locations:
    - lat: 2
      lng: 2
    - lat: 3
      lng: 3
- current_location:
    coordinates:
      lat: 2
      lng: 2
    horizontal_accuracy: 0
    course_over_ground:
      degrees: 45
      accuracy: 0
  remaining_locations:
    - lat: 3
      lng: 3
- current_location:
    coordinates:
      lat: 3
      lng: 3
    horizontal_accuracy: 0
    course_over_ground:
      degrees: 45
      accuracy: 0
  remaining_locations: []
- current_location:
    coordinates:
      lat: 3
      lng: 3
    horizontal_accuracy: 0
    course_over_ground:
      degrees: 45
      accuracy: 0
  remaining_locations: []
